deploy/kubernetes/html-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-service
spec:
  selector:
    app: html
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
